--- a/css.css
+++ b/css.css
@@ -2,14 +2,20 @@ body {
   background: black;
 }
 
+.container {
+  position: relative;
+  transform: translateY(60%);
+}
+
 .box {
   position: relative;
 }
 .box::before {
   content: "";
-  width: 440px;
-  height: 440px;
-  background-color: #89cff0;
+  width: 375px;
+  height: 375px;
+  /* background-color: #89cff0; */
+  background-color: #eee;
   position: absolute;
   z-index: -1;
   top: 50%;
@@ -38,27 +44,32 @@ body {
   margin: 0 auto;
   display: block;
 }
-.box-body:active {
+/* .box-body:active {
   cursor: pointer;
   -webkit-animation: box-body 1s forwards ease-in-out;
   animation: box-body 1s forwards ease-in-out;
+} */
+.box-body.active {
+  cursor: pointer;
+  -webkit-animation: box-body 2s forwards ease-in-out;
+  animation: box-body 2s forwards ease-in-out;
 }
 .box-body:active .img {
   opacity: 1;
   z-index: 0;
   transform: translateY(-157px);
 }
-.box-body:active .box-lid {
-  -webkit-animation: box-lid 1s forwards ease-in-out;
-  animation: box-lid 1s forwards ease-in-out;
+.box-lid-animation {
+  -webkit-animation: box-lid 2s forwards ease-in-out;
+  animation: box-lid 2s forwards ease-in-out;
 }
-.box-body:active .box-bowtie::before {
+.box-body.active .box-bowtie::before {
   -webkit-animation: box-bowtie-left 1.1s forwards ease-in-out;
-  animation: box-bowtie-left 1.1s forwards ease-in-out;
+  animation: box-bowtie-left 2.1s forwards ease-in-out;
 }
-.box-body:active .box-bowtie::after {
+.box-body.active .box-bowtie::after {
   -webkit-animation: box-bowtie-right 1.1s forwards ease-in-out;
-  animation: box-bowtie-right 1.1s forwards ease-in-out;
+  animation: box-bowtie-right 2.1s forwards ease-in-out;
 }
 .box-body::after {
   content: "";
@@ -250,4 +261,18 @@ body {
     -webkit-transform: translateX(-100%) rotate(0deg) skew(10deg, 10deg);
     transform: translateX(-100%) rotate(0deg) skew(10deg, 10deg);
   }
+}
+
+#background {
+  width: 100vw;
+  height: 100vh;
+  background-color: #cc231e;
+  background-image: radial-gradient(#eee 12px, transparent 12px);
+  background-size: 40px 40px;
+  background-position: -19px, -19px;
+  background-repeat: repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -10;
 }
