--- a/css.css
+++ b/css.css
@@ -67,7 +67,7 @@ body {
 
   opacity: 1;
   z-index: 10;
-  transform: translate(0px, -160px) rotate(90deg) scale(2);
+  transform: translate(0px, -160px) rotate(0deg) scale(2);
 }
 .box-lid-animation {
   -webkit-animation: box-lid 2s forwards ease-in-out;
@@ -285,4 +285,12 @@ body {
   top: 0;
   left: 0;
   z-index: -10;
+}
+
+img {
+  width: 100%;
+}
+
+img:nth-child(2) {
+  transform: translateY(-80%);
 }
